--- a/cam/Blog.html
+++ b/cam/Blog.html
@@ -36,7 +36,7 @@
 			<h1>Akanksha</h1>
                  <h1>bharati</h1>
 			<h1>hii akarsh</h1>
-			<h1>Deepak he mera nam samjh me aya kya</h1>
+			<h1>Deepak he mera nam samjha</h1>
 
 
 
